@@ -51,6 +51,7 @@ bugfix:
 - fix class-AddressGroup - if group isDynamic
 - fix address-edit actions=AddToGroup | improve action to work against all parent/childDG and also shared/vsys level on Firewall
 - fix rule-edit 'filter=(members.count < ) - if dynamicAddressGroup | related to last fix of class-AddressGroup if group isDynamic
+- fix class App-stroe - Application-group members are imported now
 
 1.5.13
 * class ServiceGroup: extend __construct with $fromTemplateXml
